# GLEngine

./: CMakeLists.txt  RTSEngineNotes.txt  RenderEnginePrototypes.txt
GLEngine/: CMakeLists.txt  GLEngine.sln  GLEngine.vcxproj  QtGLEngine.ncb
GLEngine.xcodeproj/: project.pbxproj
GLEngine.xcodeproj/project.xcworkspace/xcshareddata/: GLEngine.xccheckout
GLEngine.xcodeproj/project.xcworkspace/xcuserdata/robrau1.xcuserdatad/: UserInterfaceState.xcuserstate
GLEngine.xcodeproj/project.xcworkspace/xcuserdata/rrau.xcuserdatad/: UserInterfaceState.xcuserstate
GLEngine.xcodeproj/xcuserdata/robrau1.xcuserdatad/xcschemes/: GLEngine.xcscheme  TestApp.xcscheme  xcschememanagement.plist
GLEngine.xcodeproj/xcuserdata/rrau.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist  Breakpoints_v2.xcbkptlist
GLEngine.xcodeproj/xcuserdata/rrau.xcuserdatad/xcschemes/: GLEngine.xcscheme  (+1 more)
GLEngine/Debug/: BuildLog.htm  GLEngine.ilk  GLEngine.lib  TestApp.ilk  mt.dep  vc90.idb
GLEngine/GLEngine/GLEngine/: GLEngine-Prefix.pch
GLEngine/GLEngine/GLEngine.xcodeproj/: project.pbxproj
GLEngine/GLEngine/TestApp/: TestApp-Info.plist
GLEngine/glew-1.10.0/lib/Debug/Win32/: glew32d.exp  glew32d.lib
GLEngine/glew-1.10.0/lib/Release/Win32/: glew32.exp  glew32.lib  glew32s.lib
GLEngine/include/: Camera.h  Core.h  Frustrum.h  IDelegate.h  Matrix3.h  Node.h  Object.h  RenderWindow.h  SceneTree.h  canvas.h
GLEngine/include/OSX/: OSXRenderWindow.h  OpenGLView.h
GLEngine/include/Win32/: ProcessMessageDelegate.h  Win32RenderWindow.h
GLEngine/src/: Camera.cpp  Core.cpp  Matrix3.cpp  Node.cpp  Object.cpp  RenderWindow.cpp  SceneTree.cpp  Vector3.cpp
GLEngine/src/OSX/: OSXRenderWindow.mm
GLEngine/src/Win32/: Win32RenderWindow.cpp
QtGLEngine/: CMakeLists.txt  EventListener.h  File3  Frustrum.cpp  GLEngine.sln  GLEngine.vcproj  Info.plist  InputHandler.h  OSXRenderWindow.h  QtGLEngine.sln  QtGLEngine.vcproj  Win32RenderWindow.cpp  Win32RenderWindow.h  app.h  canvas.cpp  cubeprimitive.cpp  cubeprimitive.h  fragmentOrig.fs  myinputhandler.cpp  vertex.vs  vertexMP.vs
QtGLEngine/GLEngine/GLEngine/: GLEngineTarget.xcconfig
QtGLEngine/QtGLEngine.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak  robrau1.mode1v3  robrau1.pbxuser
QtGLEngine/QtGLEngine.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
QtGLEngine/data/misc/: File1
QtGLEngine/data/models/: house.ply
QtGLEngine/data/shaders/: fragmentMP.fs
QtGLEngine/include/: Core.h  Frustrum.h  Matrix4.h  Node.h  Object.h  RenderWindow.h  Vector3.h
QtGLEngine/include/GLX/: GLXRenderWindow.h
QtGLEngine/include/OSX/: OSXRenderWindow.h  OpenGLView.h
QtGLEngine/src/: Camera.cpp  Core.cpp  InputHandler.cpp  Matrix4.cpp  Object.cpp  RenderWindow.cpp
QtGLEngine/src/GLX/: GLXRenderWindow.cpp
QtGLEngine/src/OSX/: OSXRenderWindow.mm  OpenGLView.mm
QtGLEngine/tinyxml/: xmltest
TestApp/: CMakeLists.txt  TestApp-Info.plist  TestApp.vcproj  TestApp.vcxproj
TestApp/Debug/: BuildLog.htm  mt.dep  vc90.idb
TestApp/data/misc/: File
TestApp/data/models/: house.ply
TestApp/data/shaders/: fragment.fs
TestApp/include/: myinputhandler.h
TestApp/src/: app.cpp  main.cpp  myinputhandler.cpp
(+7 files in other folders)
